--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-lightbox-component": "^1.2.1",
+    "react-scripts": "3.4.1",
+    "simple-react-lightbox": "^2.6.7"
   },
   "scripts": {
     "start": "react-scripts start",
